package br.com.g4.orcamentos.domain;

public enum StatusOrcamento {
    EM_ANALISE,
    APROVADO,
    RECUSADO,
    CANCELADO
}
