package br.com.g4.orcamentos.domain;

public interface Validavel {
    boolean validar();
}
