@startuml Diagrama_Arquitetural_Orcamentos

skinparam monochrome true
skinparam classAttributeIconSize 0
skinparam linetype ortho
left to right direction

package "Interfaces" {
  interface Validavel {
    + validar(): boolean
  }
}

package "Dominio" {
  abstract class Produto {
    - id: Integer
    # largura: double
    # altura: double
    # precoM2: double
    + Produto(largura: double, altura: double)
    + {abstract} getCategoria(): String
    + {abstract} valorMetroQ(): double
    + getArea(): double
    + calcularPreco(): double
    + getResumo(): String
    + getId(): Integer
    + setId(id: Integer): void
    + getLargura(): double
    + getAltura(): double
    + getPrecoM2(): double
  }

  class Toldo {
    - material: String
    - tipo: String
    - cor: String
    + Toldo(largura: double, altura: double, material: String, tipo: String, cor: String)
    + getCategoria(): String
    + valorMetroQ(): double
    - calcularValorMetro(): double
    - valorPorMaterial(valor: String): double
    - valorPorTipo(valor: String): double
  }

  class Cortina {
    - tecido: String
    + Cortina(largura: double, altura: double, tecido: String)
    + getCategoria(): String
    + valorMetroQ(): double
    - calcularValorMetro(valor: String): double
    + getTecido(): String
  }

  class Cliente {
    - id: Integer
    - nome: String
    - documento: String
    - telefone: String
    - email: String
    - endereco: String
    + Cliente(nome: String, documento: String, telefone: String, email: String, endereco: String)
    + Cliente(id: Integer, nome: String, documento: String, telefone: String, email: String, endereco: String)
    + validar(): boolean
    + {static} limparDocumento(documento: String): String
    - normalizarTexto(valor: String): String
    + getId(): Integer
    + setId(id: Integer): void
    + getNome(): String
    + getDocumento(): String
  }

  class Vendedor {
    - id: Integer
    - nome: String
    - telefone: String
    - email: String
    - percentualComissao: double
    + Vendedor(nome: String, telefone: String, email: String, percentualComissao: double)
    + Vendedor(id: Integer, nome: String, telefone: String, email: String, percentualComissao: double)
    + validar(): boolean
    + criarOrcamento(cliente: Cliente): Orcamento
    + calcularComissao(valorVenda: double): double
    + getId(): Integer
    + setId(id: Integer): void
    + getNome(): String
  }

  class Orcamento {
    - id: Integer
    - cliente: Cliente
    - vendedor: Vendedor
    - produtos: List<Produto>
    - status: StatusOrcamento
    - criadoEm: LocalDateTime
    + Orcamento(cliente: Cliente, vendedor: Vendedor)
    + Orcamento(id: Integer, cliente: Cliente, vendedor: Vendedor, status: StatusOrcamento, criadoEm: LocalDateTime)
    + addProduto(produto: Produto): void
    + removerProduto(produto: Produto): void
    + alterarStatus(novoStatus: StatusOrcamento): void
    + calcularTotal(): double
    + getComissaoVendedor(): double
    + getId(): Integer
    + getStatus(): StatusOrcamento
  }

  enum StatusOrcamento {
    EM_ANALISE
    APROVADO
    RECUSADO
    CANCELADO
  }

  Toldo --|> Produto
  Cortina --|> Produto
  Cliente ..|> Interfaces::Validavel
  Vendedor ..|> Interfaces::Validavel
  Orcamento --> Cliente
  Orcamento --> Vendedor
  Orcamento "1" *-- "*" Produto
  Orcamento --> StatusOrcamento
}

package "Repositorios" {
  class ClienteDAO {
    + salvar(cliente: Cliente): Cliente
    + listar(): List<Cliente>
    + buscarPorId(id: int): Cliente
    + existeDocumento(documento: String): boolean
    + excluir(id: int): void
    - mapear(rs: ResultSet): Cliente
  }

  class VendedorDAO {
    + salvar(vendedor: Vendedor): Vendedor
    + listar(): List<Vendedor>
    + buscarPorId(id: int): Vendedor
    + excluir(id: int): void
    - mapear(rs: ResultSet): Vendedor
  }

  class ProdutoDAO {
    + salvar(produto: Produto): Produto
    + buscarPorId(id: int): Produto
    + excluir(id: int): void
    - mapear(rs: ResultSet): Produto
  }

  class OrcamentoDAO {
    - clienteDAO: ClienteDAO
    - vendedorDAO: VendedorDAO
    - produtoDAO: ProdutoDAO
    + salvar(orcamento: Orcamento): Orcamento
    + atualizarStatus(id: int, status: StatusOrcamento): void
    + listar(): List<Orcamento>
    - vincularProduto(c: Connection, orcamentoId: int, produtoId: int): void
    - listarProdutos(c: Connection, orcamentoId: int): List<Produto>
    - mapear(rs: ResultSet): Orcamento
  }

  ClienteDAO --> Dominio::Cliente
  VendedorDAO --> Dominio::Vendedor
  ProdutoDAO --> Dominio::Produto
  OrcamentoDAO --> Dominio::Orcamento
  OrcamentoDAO --> ClienteDAO
  OrcamentoDAO --> VendedorDAO
  OrcamentoDAO --> ProdutoDAO
}

package "Gerenciamento" {
  class Database {
    - {static} DB_DIR: String
    - {static} URL: String
    + {static} getConnection(): Connection
    + {static} inicializar(): void
    - {static} executarSchema(): void
  }

  class SistemaService {
    - clienteDAO: ClienteDAO
    - vendedorDAO: VendedorDAO
    - produtoDAO: ProdutoDAO
    - orcamentoDAO: OrcamentoDAO
    + cadastrarCliente(nome: String, documento: String, telefone: String, email: String, endereco: String): Cliente
    + cadastrarVendedor(nome: String, telefone: String, email: String, percentualComissao: double): Vendedor
    + criarOrcamento(vendedor: Vendedor, cliente: Cliente, produtos: List<Produto>): Orcamento
    + atualizarStatus(orcamento: Orcamento, status: StatusOrcamento): void
    + listarClientes(): List<Cliente>
    + listarVendedores(): List<Vendedor>
    + listarOrcamentos(): List<Orcamento>
    + excluirCliente(cliente: Cliente): void
    + excluirVendedor(vendedor: Vendedor): void
  }

  class MainApp {
    + start(stage: Stage): void
    + main(args: String[]): void
    - executar(sucesso: String, acao: Acao): void
  }

  SistemaService --> Repositorios::ClienteDAO
  SistemaService --> Repositorios::VendedorDAO
  SistemaService --> Repositorios::ProdutoDAO
  SistemaService --> Repositorios::OrcamentoDAO
  SistemaService --> Dominio::Cliente
  SistemaService --> Dominio::Vendedor
  SistemaService --> Dominio::Orcamento
  SistemaService --> Dominio::StatusOrcamento

  MainApp --> SistemaService
  MainApp --> Gerenciamento::Database

  Repositorios::ClienteDAO --> Gerenciamento::Database
  Repositorios::VendedorDAO --> Gerenciamento::Database
  Repositorios::ProdutoDAO --> Gerenciamento::Database
  Repositorios::OrcamentoDAO --> Gerenciamento::Database
}

}
@enduml